# onix

./: Cargo.toml  Makefile  rustfmt.toml  typos.toml
.cargo/: config.toml
crates/allocator/: Cargo.toml
crates/allocator/src/: fixed_size_block.rs  lib.rs  linked_list.rs
crates/ansi-term/: Cargo.toml
crates/ansi-term/src/: lib.rs
crates/devicetree/: Cargo.toml
crates/devicetree/src/: fdt.rs  lib.rs  node.rs  struct_lexer.rs
crates/devicetree/src/common/: mod.rs  property.rs
crates/devicetree/src/flattened/: layout.rs  mod.rs  node.rs  struct_lexer.rs
crates/devicetree/src/parsed/: mod.rs  node.rs
crates/devtree/: Cargo.toml
crates/devtree-derive/: Cargo.toml
crates/devtree-derive/src/: builder.rs  lib.rs  meta.rs  sgen.rs
crates/devtree/examples/: debug_print.rs  deserialize.rs  deserialize_devicetree.rs  dump_devicetree.rs  iterate_devicetree.rs  search.rs  search_devicetree.rs
crates/devtree/examples/assets/: qemu-virt-opensbi.dtb  qemu-virt.dtb
crates/devtree/examples/bindings/: standard.rs
crates/devtree/src/: __private.rs  bytes.rs  debug.rs  lib.rs  macros.rs  polyfill.rs  types.rs  utils.rs
crates/devtree/src/blob/: alloc.rs  devicetree.rs  error.rs  header.rs  item.rs  mod.rs  node.rs  property.rs  reserved_memory.rs  struct_block.rs
crates/devtree/src/blob/devicetree/: alloc.rs  mod.rs
crates/devtree/src/cursor/: item.rs  mod.rs  node.rs  property.rs  token.rs
crates/devtree/src/de/: context.rs  error.rs  mod.rs  traits.rs  util.rs
crates/devtree/src/de/collections/: alloc.rs
crates/devtree/src/de/impls/: deserialize_node.rs  deserialize_property.rs  mod.rs  property.rs
crates/devtree/src/de/impls/deserialize_node/: alloc.rs  mod.rs
crates/devtree/src/de/impls/node/: alloc.rs  mod.rs
crates/devtree/src/de/impls/node_collection/: alloc.rs
crates/devtree/src/de/impls/property_collection/: alloc.rs
crates/devtree/src/de/types/: default_node_deserializer.rs  default_property_deserializer.rs  mod.rs
crates/devtree/src/model/: mod.rs
crates/devtree/src/model/node/: interrupt_generating_device.rs  mod.rs  node_full_name.rs  node_name.rs  node_path.rs  node_unit_address.rs
crates/devtree/src/model/property/: mod.rs  status.rs
crates/devtree/src/model/property/address/: mod.rs  ranges.rs  reg.rs
crates/devtree/src/model/property/basic/: mod.rs  property_name.rs  u32_array.rs
crates/devtree/src/model/property/numeric/: address_cells.rs  interrupt_cells.rs  mod.rs  phandle.rs  size_cells.rs
crates/devtree/src/model/property/string/: byte_str_list.rs  compatible.rs  mod.rs  model.rs  str_list.rs
crates/devtree/src/node_stack/: error.rs  traits.rs
crates/devtree/src/node_stack/types/: array_node_stack.rs  mod.rs  slice_node_stack.rs
crates/devtree/src/search/: mod.rs  query.rs
crates/devtree/src/testing/: blob_builder.rs  block_builder.rs  mod.rs  slice_token_cursor.rs
crates/devtree/src/token_cursor/: error.rs  mod.rs  traits.rs
crates/devtree/src/token_cursor/types/: blob_token_cursor.rs  mod.rs
crates/devtree/src/tree_cursor/: debug_tree.rs  error.rs  glob.rs  iter.rs  mod.rs
crates/devtree/src/tree_cursor/traits/: alloc.rs  mod.rs
crates/devtree/src/tree_cursor/types/: mod.rs  stack_based_tree_cursor.rs
crates/devtree/src/types/: mod.rs  property.rs
crates/devtree/src/types/node/: alloc.rs  mod.rs
crates/devtree/src/util/: aligned_buffer.rs  mod.rs
crates/devtree/tests/: parse_test.rs
crates/endian/: Cargo.toml
crates/endian/src/: lib.rs
crates/kernel/: Cargo.toml  kernel.ld
crates/kernel/src/: boot.rs  chosen.rs  console.rs  cpu.rs  cpu_local.rs  error.rs  iter.rs  log.rs  main.rs  spinlock.rs
crates/kernel/src/boot/: mod.rs
crates/kernel/src/boot/imp/: mod.rs  riscv64.rs  unsupported.rs
crates/kernel/src/console/: line_buffered.rs  mod.rs  sbi_debug.rs
crates/kernel/src/cpu/: de.rs  mod.rs  parse.rs
crates/kernel/src/drivers/: mod.rs
crates/kernel/src/drivers/irq/plic/: de.rs  mod.rs  parse.rs
crates/kernel/src/drivers/serial/: de.rs  mod.rs  ns16550a.rs  parse.rs
crates/kernel/src/interrupt/: mod.rs  timer.rs
crates/kernel/src/interrupt/imp/: riscv64.rs  unsupported.rs
crates/kernel/src/interrupt/timer/: instant.rs  mod.rs
crates/kernel/src/interrupt/trap/: mod.rs
crates/kernel/src/interrupt/trap/imp/: riscv64.rs  unsupported.rs
crates/kernel/src/memory/: allocator.rs  kernel_space.rs  layout.rs  mod.rs
crates/kernel/src/memory/kernel_space/: mod.rs  stack.rs
crates/kernel/src/memory/layout/: fdt.rs  mod.rs  parse.rs
crates/kernel/src/memory/page_table/sv39/: address.rs  entry.rs  mod.rs  table.rs
crates/kernel/src/sync/: spinlock.rs
crates/kernel/src/task/: mod.rs  scheduler.rs
crates/kernel/src/task/scheduler/: context.rs  mod.rs
crates/range-set/: Cargo.toml
crates/range-set/src/: lib.rs
crates/riscv-utils/: Cargo.toml
crates/riscv-utils/src/: asm.rs  lib.rs
crates/sbi/: Cargo.toml
crates/sbi-sys/: Cargo.toml
crates/sbi-sys/src/: debug_console.rs  hart_state_management.rs  lib.rs  rfence.rs
crates/sbi/src/: debug_console.rs  hart_state_management.rs  lib.rs  rfence.rs
crates/snafu-utils/: Cargo.toml
crates/snafu-utils/src/: lib.rs
crates/sv39/: Cargo.toml
crates/sv39/src/: address.rs  entry.rs  lib.rs  table.rs
scripts/: launch_qemu
