[package]
name = "devicetree"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
custom_debug_derive.workspace = true
dataview.workspace = true
either.workspace = true
endian.workspace = true
platform-cast.workspace = true
snafu.workspace = true
snafu-utils.workspace = true

[lints]
workspace = true
