[package]
name = "devtree"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[features]
default = []
alloc = [ "bstr/alloc" ]
unstable-provider-api = [ "snafu/unstable-provider-api" ]

[dependencies]
bstr = { workspace = true }
dataview.workspace = true
devtree-derive.workspace = true
either.workspace = true
endian.workspace = true
platform-cast.workspace = true
snafu.workspace = true
snafu-utils.workspace = true

[dev-dependencies]
devtree = { workspace = true, features = ["alloc"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
