[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
allocator.workspace = true
ansi-term.workspace = true
arrayvec.workspace = true
bitflags.workspace = true
cfg-if.workspace = true
dataview.workspace = true
devicetree.workspace = true
platform-cast.workspace = true
range-set.workspace = true
riscv.workspace = true
riscv-utils.workspace = true
sbi.workspace = true
snafu.workspace = true
snafu-utils.workspace = true
spin.workspace = true

[lints]
workspace = true
