[package]
name = "sbi"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
sbi-sys.workspace = true

[lints]
workspace = true
