[package]
name = "sv39"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
bitflags.workspace = true
dataview.workspace = true
platform-cast.workspace = true
riscv.workspace = true
snafu.workspace = true

[lints]
workspace = true
